<resources>
    <string name="app_name">FinalApp</string>
    <string name="final_text_welcome1">欢迎来到喵喵健康</string>
    <string name="final_text_welcome2">我是你的健康助手小u</string>
    <string name="final_text_welcome3">这里将为您提供最健康的生活方式，同时享受美食带来的乐趣！</string>
    <string name="final_btn_1">点击进入</string>
    <string name="final_text_page1">首页</string>
    <string name="final_text_page1_btn2">BMI喵星人</string>
    <string name="final_text_page1_btn3">喵体日记</string>
    <string name="final_text_page1_btn4">喵力全开</string>
    <string name="final_text_page1_btn5">喵喵食谱</string>
    <string name="final_text_page1_btn2_T1">身高（米）</string>
    <string name="final_text_page1_btn2_E1">请输入您的身高（例如1.75）</string>
    <string name="final_text_page1_btn2_T2">体重（千克）</string>
    <string name="final_text_page1_btn2_E2">请输入您的体重（例如65）</string>
    <string name="final_text_page1_radioMale">男</string>
    <string name="final_text_page1_radioFemale">女</string>
    <string name="final_text_page1_btn2_B1">计算BMI</string>
    <string name="final_text_page1_btn3_T1">喵喵日记</string>
    <string name="final_text_page1_btn3_B1">新建</string>
    <string name="final_text_page1_btn3_B1_T1">标题</string>
    <string name="final_text_page1_btn3_B1_E1">输入标题</string>
    <string name="final_text_page1_btn3_B1_T2">内容</string>
    <string name="final_text_page1_btn3_B1_E2">输入内容</string>
    <string name="final_text_page1_btn3_B1_T3">时间</string>
    <string name="final_text_page1_btn3_B1_E3">输入时间（例如：2025-6-6）</string>
    <string name="final_text_page1_btn3_B1_B1">保存</string>
    <string name="final_text_page1_btn3_B1_B2">取消</string>
    <string name="final_text_page1_btn4_E1">请输入运动方式</string>
    <string name="final_text_page1_btn4_E2">请输入备注</string>
    <string name="final_text_page1_btn4_T1">日期和时间：</string>
    <string name="final_text_page1_btn4_T2">00:00:00</string>

    <string name="final_text_page1_btn4_B1">请选择日期和时间</string>
    <string name="final_text_page1_btn4_B2">开始</string>
    <string name="final_text_page1_btn4_B3">暂停</string>
    <string name="final_text_page1_btn4_B4">结束</string>
    <string name="final_text_page1_btn4_B5">新建运动</string>
</resources>