<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background"
    tools:context=".Final_2_1Activity">

    <TextView
        android:id="@+id/textView5"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/green_color"
        android:gravity="center"
        android:text="@string/final_text_page1_btn2"
        android:textSize="26sp"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">

        <TextView
            android:id="@+id/textView1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/final_text_page1_btn2_T1"
            android:textSize="22sp" />

        <EditText
            android:id="@+id/EditText1"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/final_text_page1_btn2_E1"
            android:inputType="numberDecimal"
            android:padding="16dp"
            android:background="@drawable/edit_text_background" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="18dp"
            android:text="@string/final_text_page1_btn2_T2"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/EditText2"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="8dp"
            android:ems="10"
            android:hint="@string/final_text_page1_btn2_E2"
            android:inputType="numberDecimal"
            android:padding="16dp"
            android:background="@drawable/edit_text_background" />

        <RadioGroup
            android:id="@+id/radioGroupGender"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radioMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/final_text_page1_radioMale"
                android:textSize="20sp"
                android:layout_marginEnd="16dp" />

            <RadioButton
                android:id="@+id/radioFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/final_text_page1_radioFemale"
                android:textSize="20sp" />

        </RadioGroup>

        <Button
            android:id="@+id/button2_1"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/rounded_button"
            android:text="@string/final_text_page1_btn2_B1"
            android:textColor="#FFFFFF"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:textSize="22sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:textSize="22sp" />

    </LinearLayout>

</LinearLayout>