<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".Final_2Activity">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/green_color"
        android:gravity="center"
        android:text="@string/final_text_page1"
        android:textColor="@color/pink_color"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!-- 中间图片 -->
    <ImageView
        android:id="@+id/my_image_view"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="8dp"
        android:contentDescription="@string/app_name"
        android:scaleType="centerCrop"
        android:src="@drawable/background2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView3" />

    <!-- 按钮网格 -->
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline_horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.7" />

    <!-- 第一行按钮 -->
    <Button
        android:id="@+id/button_2"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_button"
        android:text="@string/final_text_page1_btn2"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_image_view" />

    <Button
        android:id="@+id/button_3"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_button"
        android:text="@string/final_text_page1_btn3"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
        app:layout_constraintTop_toBottomOf="@+id/my_image_view" />

    <!-- 第二行按钮 -->
    <Button
        android:id="@+id/button_4"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_button"
        android:text="@string/final_text_page1_btn4"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal" />

    <Button
        android:id="@+id/button_5"
        android:layout_width="140dp"
        android:layout_height="140dp"
        android:layout_margin="16dp"
        android:background="@drawable/rounded_button"
        android:text="@string/final_text_page1_btn5"
        android:textColor="#FFFFFF"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline_vertical"
        app:layout_constraintTop_toTopOf="@+id/guideline_horizontal" />

</androidx.constraintlayout.widget.ConstraintLayout>